add device name to peer response
